[package]
name = "image2emblem"
version = "0.3.0"
authors = ["Ricardo Mendes <rokusu@gmail.com>"]
edition = "2018"

description = "Converts an image into an F-Zero GX emblem"
documentation = "http://fzerocentral.github.io/fzgx-image2emblem-rs/image2emblem/index.html"
homepage = "https://github.com/fzerocentral/fzgx-image2emblem-rs"
repository = "https://github.com/fzerocentral/fzgx-image2emblem-rs"
readme = "README.md"
license = "MIT"

[[bin]]
name = "emblem"
path = "src/main.rs"

[dependencies]
byteorder = "0.3"
image = "0.10"
chrono = "0.2"
itertools = "0.3"
clap = "~2.33"
structopt = "0.3.14"
anyhow = "1.0.31"
